make footer fixed again but now add padding to the bottom so it doesnt overlap

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 * {
     font-family: "Roboto";
 }
+body {
+    padding-bottom: 50px;
+}
